# Haskell_webserver

./: .gitignore  .webserver.cabal.swp  webserver.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.8/: package.cache  webserver-0.1.0.0-inplace-webserver-internal.conf
html/: index.html
lib/: .MyServer.hs.swp  .Parsers.hs.swm  .Parsers.hs.swn  .Parsers.hs.swo  Encoders.hs  MyServer.hs  Parsers.hs  ServerTypes.hs
