cabal-version:      3.0
name:               webserver
version:            0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            NONE

-- The package author(s).
author:             saud.amahri@gmail.com

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         samahri

-- A copyright notice.
-- copyright:
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common base
    ghc-options: -Wall -fdefer-typed-holes
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings
    build-depends:    base ^>=4.16.4.0

library webserver-internal
    import:           base
    -- A list of modules added by this package
    exposed-modules: MyServer
    hs-source-dirs: lib
    default-language: Haskell2010
    build-depends: relude ^>= 1.1 || ^>= 1.2
    reexported-modules: Relude
  
executable webserver
    build-depends: webserver-internal, base
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs
    -- Directories containing source files.
    hs-source-dirs:   app
    default-language: Haskell2010
